@@ -14,11 +14,14 @@ server "example.com" {
 	root "/var/gemini/example.com"
 }
 
-# another example server, this time with CGI enabled for scripts in
-# /cgi-bin/
 server "it.example.com" {
 	cert "/path/to/cert.pem"
 	key  "/path/to/key.pem"
 	root "/var/gemini/example.com"
+
+        # enable CGI scripts in /cgi-bin/
 	cgi  "/cgi-bin/"
+
+        # optional
+        lang "it"
 }
